--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 }
 
 .section-container {
+    height: 40vh;
     margin-top: 40px;
     background-color: #fff;
     padding: 40px;
@@ -14,7 +15,7 @@
 
 textarea {
     width: 98%;
-    height: 400px;
+    height:60%;
     border: 1px solid #ced4da;
     border-radius: 10px;
     font-family: Inter;
