placeholder text justify

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,21 @@ textarea {
     resize: none;
 }
 
+.text-area::placeholder {
+    /* Firefox, Chrome, Opera */
+    text-align: justify;
+}
+
+.text-area::-ms-input-placeholder {
+    /* Microsoft Edge */
+    text-align: justify;
+}
+
+.text-area:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    text-align: justify;
+}
+
 textarea:focus {
     outline: none;
 }
